# petstagram

./: pyproject.toml
apps/accounts/: urls.py  views.py
apps/common/: admin.py  models.py
apps/common/migrations/: 0001_initial.py
apps/pets/: models.py  urls.py  views.py
apps/pets/migrations/: 0001_initial.py
apps/photos/: admin.py  models.py  urls.py  validators.py  views.py
apps/photos/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: 404.html
templates/accounts/: login-page.html  profile-delete-page.html  profile-details-page.html  profile-edit-page.html  register-page.html
templates/common/: base.html  home-page.html
templates/pets/: pet-add-page.html  pet-delete-page.html  pet-details-page.html  pet-edit-page.html
templates/photos/: photo-add-page.html  photo-details-page.html  photo-edit-page.html
